# IoT-CO2System

./: CMakeLists.txt  Makefile  README.md  cbor_parser.py  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  comm_ble.c  comm_http.c  comm_http.h  comm_mqtt.c  comm_mqtt.h  globals.h  main.c  sensor_sgp30.c  sensor_sgp30.h
main/communications/: comm_ble.c  comm_ble.h  comm_http.c  comm_http.h  comm_mqtt.c  comm_mqtt.h  comm_sntp.c  comm_sntp.h
main/communications/certs/: certificates.md  http_cert.pem
main/communications/certs/192.168.1.45/: http_cert.pem  http_key.pem
main/communications/certs/192.168.43.94/: http_key.pem
main/provisioning/: prov.c  prov.h  prov_handlers.c
main/sensors/: sensor_sgp30.c  sensor_sgp30.h
node-red/: IoT-CO2System.json  esp-ble.csv  esp-co2.csv
